--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -11,18 +11,17 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="email"
         android:inputType="textPersonName"
         android:textColor="@android:color/background_light"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.445" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextReenterPassword"
@@ -41,7 +40,7 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="368dp"
-        android:layout_height="44dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
@@ -49,7 +48,7 @@
         android:inputType="textPassword"
         android:textColor="@android:color/background_light"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextemail" android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextemail" />
 
     <Button
         android:id="@+id/buttonSignup"
