navigation_bar_system

--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.amila.autocare.navigation"
-    tools:showIn="@layout/app_bar_navigation">
+    tools:context="com.example.amila.autocare.navigationDrawer"
+    tools:showIn="@layout/app_bar_navigation_drawer">
 
 </android.support.constraint.ConstraintLayout>
