--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amila.autocare.navigation">
+    tools:context="com.example.amila.autocare.navigationDrawer">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_navigation" />
+    <include layout="@layout/content_navigation_drawer" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
