--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,9 +9,9 @@
     </style>
 
     <style name="autocare" parent="AppTheme">
-        <item name="colorPrimary">@android:color/holo_blue_light</item>
-        <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
-        <item name="android:colorBackground">?attr/actionModeSplitBackground</item>
+        <item name="colorPrimary">@color/material_blue</item>
+        <item name="colorPrimaryDark">@color/material_dark_blue</item>
+        <item name="android:colorBackground">@color/material_blue</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
