--- a/app/src/main/res/layout/activity_search_for_places.xml
+++ b/app/src/main/res/layout/activity_search_for_places.xml
@@ -1,8 +1,40 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+    xmlns:tools2="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.amila.autocare.searchForPlaces" />
+    android:layout_height="match_parent">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools2:context="com.example.amila.autocare.searchForPlaces" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnFiilingStation"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nearby Filling Stations" />
+
+        <Button
+            android:id="@+id/btnSpareParts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Nearby Spare Parts Shops" />
+
+
+
+    </LinearLayout>
+
+</FrameLayout>
+
+
+
