--- a/app/src/main/res/layout/activity_search_for_places.xml
+++ b/app/src/main/res/layout/activity_search_for_places.xml
@@ -17,21 +17,14 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnFiilingStation"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nearby Filling Stations" />
 
-        <Button
-            android:id="@+id/btnSpareParts"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nearby Spare Parts Shops" />
-
-
-
+        <Spinner
+            android:id="@+id/spinnerCateogary"
+            android:layout_width="209dp"
+            android:layout_height="50dp"
+            android:background="@color/cardview_light_background"
+            android:popupBackground="@color/cast_intro_overlay_button_background_color"
+            android:visibility="visible" />
     </LinearLayout>
 
 </FrameLayout>
