--- a/app/src/main/res/layout/activity_select_vehicle.xml
+++ b/app/src/main/res/layout/activity_select_vehicle.xml
@@ -47,7 +47,7 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/textViewModel"
         app:layout_constraintTop_toBottomOf="@+id/spinner_select_brand" />
 
     <TextView
@@ -162,7 +162,7 @@
         app:layout_constraintTop_toBottomOf="@+id/revenue_license_expiry" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewModel"
         android:layout_width="75dp"
         android:layout_height="32dp"
         android:layout_marginStart="36dp"
