--- a/app/src/main/res/layout/activity_select_vehicle.xml
+++ b/app/src/main/res/layout/activity_select_vehicle.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.amila.autocare.add_edit_vehicle">
+    tools:context="com.example.amila.autocare.ManageVehicles.add_edit_vehicle">
 
 
     <TextView
