--- a/app/src/main/res/layout/vehicle_card.xml
+++ b/app/src/main/res/layout/vehicle_card.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -47,6 +46,21 @@
                 android:paddingLeft="@dimen/album_title_padding"
                 android:paddingRight="@dimen/album_title_padding"
                 android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/viewFullDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/model"
+                android:layout_weight="1"
+                android:background="@color/cast_intro_overlay_button_background_color"
+                android:fontFamily="sans-serif"
+                android:foreground="@color/cardview_shadow_end_color"
+                android:text="View Full Detail"
+                android:textAlignment="center"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="18sp" />
 
 
         </RelativeLayout>
