--- a/app/src/main/res/layout/activity_select_vehicle.xml
+++ b/app/src/main/res/layout/activity_select_vehicle.xml
@@ -57,20 +57,18 @@
         android:layout_marginStart="36dp"
         android:text="Reg No"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText_reg_no"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText_reg_no_letters"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editText_reg_no"
-        android:layout_width="wrap_content"
+        android:id="@+id/editText_reg_no_letters"
+        android:layout_width="83dp"
         android:layout_height="47dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Reg No"
         android:inputType="textPersonName"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/editText_model" />
 
@@ -96,7 +94,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/editText_reg_no" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_reg_no_letters" />
 
     <TextView
         android:id="@+id/textView12"
@@ -219,5 +217,28 @@
         android:inputType="numberDecimal"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/next_service" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:text="-"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/editText_reg_no_letters"
+        tools:layout_editor_absoluteY="183dp" />
+
+    <EditText
+        android:id="@+id/editText_reg_no_number"
+        android:layout_width="125dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/editText_model" />
 
 </android.support.constraint.ConstraintLayout>
