--- a/app/src/main/res/layout/activity_select_vehicle.xml
+++ b/app/src/main/res/layout/activity_select_vehicle.xml
@@ -236,7 +236,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/editText_model" />
