--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,12 @@
         <item name="colorPrimary">@color/material_blue</item>
         <item name="colorPrimaryDark">@color/material_dark_blue</item>
         <item name="android:colorBackground">@color/material_blue</item>
+        <item name="android:spinnerDropDownItemStyle">@style/mySpinnerItemStyle</item>
+    </style>
+
+
+    <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
+        <item name="android:textColor">@color/my_spinner_text_color</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
